# manipulation_research

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  h.cpp  hh.cpp  pyproject.toml
analysis/: disable_motion.py  force.py  gripper.py  manual_mode.py  move_circle.py  move_joints.py  move_line.py
hooks/: install_xarm.py
models/environment/: lite6_table.urdf
models/objects/: cube1.urdf  cube_1_inch.urdf  cube_1_inch_blue.urdf  cube_1_inch_green.urdf  cube_1_inch_red.urdf  cube_1_inch_yellow.urdf
python/algorithms/tracking/: simple_pick_and_place.py
python/analysis/: get.py  joint_velocity.py  lite6_pliant_analysis.py  reset.py  reset_and_disconnect.py
python/analysis/pliant_analysis/: choreographer_config.yaml  lite6_pliant_analysis.py  lite6_pliant_analysis_choreographer.py
python/analysis/pliant_analysis/tests/: test_lite6_pliant_analysis_choreographer.py
python/common/: class_utils.py  custom_types.py  exceptions.py  model_utils.py  robot_model_utils.py  testing_utils.py
python/common/control/: constructs.py  signals.py
python/common/manipulator_pliants/: lite6_pliant.py
python/common/manipulator_pliants/tests/: test_lite6_pliant.py
python/common/pliant/: multibody_pliant.py
python/common/tests/: test_class_utils.py
python/inspection/: check_gripper_control.py  visualize_manipulator.py  visualize_pliant_diagram.py
python/lite6/pliant/: lite6_pliant.py  lite6_pliant_utils.py
python/lite6/pliant/tests/: test_lite6_pliant.py
python/lite6/systems/: lite6_diff_ik_controller.py  lite6_gripper_status_source.py
python/lite6/utils/: lite6_hardware_utils.py  lite6_model_utils.py
python/lite6/utils/tests/: test_lite6_model_utils.py
python/manr/algorithms/tracking/: simple_pick_and_place.py
python/manr/analysis/pliant_analysis/: choreographer_config.yaml  lite6_pliant_analysis.py  lite6_pliant_analysis_choreographer.py
python/manr/analysis/pliant_analysis/tests/: test_lite6_pliant_analysis_choreographer.py
python/manr/common/: custom_types.py  exceptions.py  logging_utils.py  model_utils.py  path_utils.py
python/manr/common/control/: constructs.py
python/manr/common/control/tests/: test_signals.py
python/manr/common/definitions/: control_definitions.py  state_definitions.py
python/manr/common/pliant/: multibody_pliant.py
python/manr/common/tests/: test_model_utils.py  test_path_utils.py
python/manr/inspection/: check_gripper_control.py  visualize_manipulator.py  visualize_pliant_diagram.py
python/manr/lite6/pliant/: lite6_pliant.py  lite6_pliant_utils.py
python/manr/lite6/pliant/tests/: test_lite6_pliant.py
python/manr/lite6/systems/: lite6_diff_ik_controller.py  lite6_gripper_status_source.py
python/manr/lite6/utils/: lite6_hardware_utils.py  lite6_model_utils.py
python/manr/lite6/utils/tests/: test_lite6_model_utils.py
src/: CMakeLists.txt  drake_test.cpp
src/learn/: CMakeLists.txt  mprog1.cc  xarm_simulation.cc
src/xarm_description/urdf/: lite6.urdf  xarm_device.urdf.xacro  xarm_device_macro.xacro
src/xarm_description/urdf/common/: common.link.xacro
src/xarm_description/urdf/gripper/: lite_gripper.urdf.xacro
src/xarm_description/urdf/lite6/: lite6.urdf.xacro  lite6_robot_macro.xacro
