[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manr"
version = "0.0.1"
requires-python = "==3.12"
authors = [{ name = "Shrenik", email = "shrenik95@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
classifiers = []
dependencies = ["attrs==24.2.0", "numpy==2.1.1", "drake==1.32.0"]

[tool.isort]
profile = "black"
py_version = 38
skip_gitignore = "True"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"
respect-gitignore = true


[tool.ruff.lint]
select = [
  # Pep8
  "E",
  # Pyflakes
  "F",
  # Isort
  "I",
  # Bugbear
  "B",
  # Annotations
  "A",
  # For black compatible formatting
  "RUF100",
  # Remove unused imports
  "F401",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
