[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manr"
version = "0.0.1"
requires-python = ">=3.12"
authors = [{ name = "Shrenik", email = "shrenik95@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
classifiers = []
dependencies = [
  "attrs==24.2.0",
  # Drake requires Numpy <2.0.0
  "numpy==1.26.4",
  "pytest==8.3.2",
  "drake==1.26.0",
]

[tool.setuptools.package-dir]
manr = "python"

[tool.isort]
profile = "black"
py_version = 38
skip_gitignore = "True"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"
respect-gitignore = true


[tool.ruff.lint]
select = [
  # Pep8
  "E",
  # Pyflakes
  "F",
  # Isort
  "I",
  # Bugbear
  "B",
  # Annotations
  "A",
  # For black compatible formatting
  "RUF100",
  # Remove unused imports
  "F401",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
